--- a/frontend/my-app/src/styles/globals.css
+++ b/frontend/my-app/src/styles/globals.css
@@ -10,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 100, 150, 100;
     --background-start-rgb: 55, 55, 55;
     --background-end-rgb: 0, 0, 0;
   }
@@ -24,4 +24,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+table thead tr {
+  border: 1px solid rgb(var(--foreground-rgb));
+  border-bottom: dotted;
 }
